--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm run lint || echo "Linter not configured"
 
       - name: Run tests
-        run: npm test -- --run
+        run: npm run test:ci
 
       - name: Build
         run: npm run build
@@ -63,7 +63,7 @@ jobs:
         run: npm ci
 
       - name: Run tests
-        run: npm test -- --run
+        run: npm run test:ci
 
       - name: Build
         run: npm run build
