--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "test": "vitest",
+    "test:ci": "vitest run",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
